@@ -6,6 +6,7 @@ import com.fashion.dto.request.UpdateProfileRequestDTO;
 import com.fashion.dto.response.*;
 
 import com.fashion.exception.BadRequestException;
+import com.fashion.exception.ResourceNotFoundException;
 import com.fashion.model.Address;
 import com.fashion.model.OrderItem;
 import com.fashion.model.User;
@@ -13,6 +14,7 @@ import com.fashion.model.enums.Role;
 import com.fashion.model.enums.UserStatus;
 import com.fashion.repository.UserRepository;
 import com.fashion.service.email_log.EmailService;
+import com.fashion.util.SecurityUtils; // Nhúng thẳng Utils vào Service
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
@@ -36,13 +38,11 @@ public class UserServiceImpl implements UserService {
     private final PasswordEncoder passwordEncoder;
     private final EmailService emailService;
 
-    // --- QUẢN LÝ THÔNG TIN CÁ NHÂN ---
-
     @Override
-    public ProfileResponseDTO getProfile(Long userId) {
+    public ProfileResponseDTO getProfile() {
+        Long userId = SecurityUtils.getAuthenticatedUserId();
         User user = findUserById(userId);
 
-        // Lấy địa chỉ mặc định (hoặc địa chỉ đầu tiên nếu không có mặc định)
         List<AddressResponseDTO> addressDTOs = user.getAddresses().stream()
                 .map(a -> AddressResponseDTO.builder()
                         .id(a.getId())
@@ -51,7 +51,7 @@ public class UserServiceImpl implements UserService {
                         .receiverPhone(a.getReceiverPhone())
                         .isDefault(a.isDefault())
                         .build())
-                .toList();
+                .collect(Collectors.toList());
 
         return ProfileResponseDTO.builder()
                 .userId(user.getId())
@@ -66,10 +66,10 @@ public class UserServiceImpl implements UserService {
 
     @Override
     @Transactional
-    public ProfileResponseDTO updateProfile(Long userId, UpdateProfileRequestDTO dto) {
+    public ProfileResponseDTO updateProfile(UpdateProfileRequestDTO dto) {
+        Long userId = SecurityUtils.getAuthenticatedUserId();
         User user = findUserById(userId);
 
-        // --- Cập nhật Phone ---
         if (dto.getPhone() != null && !dto.getPhone().isBlank()) {
             if (userRepository.existsByPhoneAndIdNot(dto.getPhone(), userId)) {
                 throw new BadRequestException("Số điện thoại đã được sử dụng bởi tài khoản khác!");
@@ -77,21 +77,15 @@ public class UserServiceImpl implements UserService {
             user.setPhone(dto.getPhone());
         }
 
-        // --- Quy trình Thay đổi Email (Xác thực trước - Đổi sau) ---
         if (dto.getEmail() != null && !dto.getEmail().isBlank()) {
             if (!dto.getEmail().equalsIgnoreCase(user.getEmail())) {
-
-                // Kiểm tra xem email mới có bị trùng với người khác không
                 if (userRepository.existsByEmailAndIdNot(dto.getEmail(), userId)) {
                     throw new BadRequestException("Email đã được sử dụng bởi tài khoản khác!");
                 }
 
-                // Lưu email mới vào pendingEmail và bắt đầu quy trình xác thực
                 user.setPendingEmail(dto.getEmail());
-
                 String token = createVerificationToken(user);
                 try {
-                    // Gửi mail xác thực đến EMAIL MỚI
                     emailService.sendVerificationEmail(user.getPendingEmail(), token);
                 } catch (Exception e) {
                     System.err.println("Lỗi khi gửi mail xác thực cho email mới: " + e.getMessage());
@@ -99,7 +93,6 @@ public class UserServiceImpl implements UserService {
             }
         }
 
-        // --- Cập nhật FullName ---
         if (dto.getFullName() != null && !dto.getFullName().isBlank()) {
             user.setFullName(capitalizeName(dto.getFullName()));
         }
@@ -107,12 +100,13 @@ public class UserServiceImpl implements UserService {
 
         List<AddressResponseDTO> addressDTOs = user.getAddresses().stream()
                 .map(a -> AddressResponseDTO.builder()
+                        .id(a.getId())
                         .fullAddress(a.getFullAddress())
                         .receiverName(a.getReceiverName())
                         .receiverPhone(a.getReceiverPhone())
                         .isDefault(a.isDefault())
                         .build())
-                .toList();
+                .collect(Collectors.toList());
 
         return ProfileResponseDTO.builder()
                 .userId(user.getId())
@@ -126,23 +120,22 @@ public class UserServiceImpl implements UserService {
                 .build();
     }
 
-    // --- ĐỔI MẬT KHẨU ---
-
     @Override
     @Transactional
-    public MessageResponseDTO changePassword(Long userId, ChangePasswordRequestDTO dto) {
+    public MessageResponseDTO changePassword(ChangePasswordRequestDTO dto) {
+        Long userId = SecurityUtils.getAuthenticatedUserId();
         User user = findUserById(userId);
 
         if (!passwordEncoder.matches(dto.getCurrentPassword(), user.getPassword())) {
-            throw new RuntimeException("Mật khẩu hiện tại không đúng!");
+            throw new BadRequestException("Mật khẩu hiện tại không đúng!");
         }
 
         if (dto.getNewPassword().length() < 6) {
-            throw new RuntimeException("Mật khẩu mới phải có ít nhất 6 ký tự!");
+            throw new BadRequestException("Mật khẩu mới phải có ít nhất 6 ký tự!");
         }
 
         if (!dto.getNewPassword().equals(dto.getConfirmNewPassword())) {
-            throw new RuntimeException("Mật khẩu xác nhận không khớp!");
+            throw new BadRequestException("Mật khẩu xác nhận không khớp!");
         }
 
         user.setPassword(passwordEncoder.encode(dto.getNewPassword()));
@@ -153,11 +146,10 @@ public class UserServiceImpl implements UserService {
                 .build();
     }
 
-    // --- XÓA TÀI KHOẢN ---
-
     @Override
     @Transactional
-    public MessageResponseDTO deleteAccount(Long userId) {
+    public MessageResponseDTO deleteAccount() {
+        Long userId = SecurityUtils.getAuthenticatedUserId();
         User user = findUserById(userId);
         user.setStatus(UserStatus.BLOCKED);
         userRepository.save(user);
@@ -167,18 +159,16 @@ public class UserServiceImpl implements UserService {
                 .build();
     }
 
-    // --- XÁC THỰC EMAIL ---
-
     @Override
     @Transactional
-    public MessageResponseDTO resendVerification(Long userId) {
+    public MessageResponseDTO resendVerification() {
+        Long userId = SecurityUtils.getAuthenticatedUserId();
         User user = findUserById(userId);
 
-        // Xác định email gửi đến (ưu tiên pendingEmail nếu đang đổi mail)
         String targetEmail = (user.getPendingEmail() != null) ? user.getPendingEmail() : user.getEmail();
 
         if (user.getPendingEmail() == null && user.isEmailVerified()) {
-            throw new RuntimeException("Tài khoản đã được xác thực trước đó!");
+            throw new BadRequestException("Tài khoản đã được xác thực trước đó!");
         }
 
         String token = createVerificationToken(user);
@@ -187,44 +177,13 @@ public class UserServiceImpl implements UserService {
         try {
             emailService.sendVerificationEmail(targetEmail, token);
         } catch (Exception e) {
-            throw new RuntimeException("Lỗi khi gửi lại email xác thực: " + e.getMessage());
+            throw new BadRequestException("Lỗi khi gửi lại email xác thực: " + e.getMessage());
         }
 
         return MessageResponseDTO.builder()
                 .message("Email xác thực đã được gửi lại thành công đến " + targetEmail)
                 .build();
     }
-
-    // --- PRIVATE HELPERS ---
-
-    private User findUserById(Long userId) {
-        return userRepository.findById(userId)
-                .orElseThrow(() -> new RuntimeException("Người dùng không tồn tại!"));
-    }
-
-    private String createVerificationToken(User user) {
-        String token = UUID.randomUUID().toString();
-        user.setVerificationToken(token);
-        user.setVerificationTokenExpiryDate(Instant.now().plus(24, ChronoUnit.HOURS));
-        return token;
-    }
-
-    private String capitalizeName(String name) {
-        if (name == null || name.isBlank())
-            return "";
-        String[] words = name.toLowerCase().split("\\s+");
-        StringBuilder sb = new StringBuilder();
-        for (String word : words) {
-            if (!word.isEmpty()) {
-                sb.append(Character.toUpperCase(word.charAt(0)))
-                        .append(word.substring(1).toLowerCase())
-                        .append(" ");
-            }
-        }
-        return sb.toString().trim();
-    }
-
-    // --- QUẢN LÝ KHÁCH HÀNG (ADMIN) ---
 
     @Override
     public Page<CustomerSummaryResponseDTO> getAllCustomers(String keyword, Pageable pageable) {
@@ -248,7 +207,7 @@ public class UserServiceImpl implements UserService {
     public CustomerDetailResponseDTO getCustomerDetail(Long customerId) {
         User user = findUserById(customerId);
         if (user.getRole() != Role.CUSTOMER) {
-            throw new RuntimeException("Tài khoản không phải là khách hàng!");
+            throw new BadRequestException("Tài khoản không phải là khách hàng!");
         }
 
         List<OrderSummaryResponseDTO> orderHistory = user.getOrders().stream().map(o -> {
@@ -268,7 +227,6 @@ public class UserServiceImpl implements UserService {
                     .build();
         }).collect(Collectors.toList());
 
-        // Lấy địa chỉ hiển thị cho Admin xem chi tiết khách hàng
         String defaultAddressStr = user.getAddresses().stream()
                 .filter(Address::isDefault)
                 .map(Address::getFullAddress)
@@ -280,7 +238,7 @@ public class UserServiceImpl implements UserService {
                 .fullName(user.getFullName())
                 .email(user.getEmail())
                 .phone(user.getPhone())
-                .address(defaultAddressStr) // Đã sửa đổi
+                .address(defaultAddressStr)
                 .status(user.getStatus())
                 .orderHistory(orderHistory)
                 .build();
@@ -291,10 +249,10 @@ public class UserServiceImpl implements UserService {
     public MessageResponseDTO updateCustomerStatus(Long customerId, UpdateCustomerStatusRequestDTO dto) {
         User user = findUserById(customerId);
         if (user.getRole() != Role.CUSTOMER) {
-            throw new RuntimeException("Chỉ có thể cập nhật trạng thái của khách hàng!");
+            throw new BadRequestException("Chỉ có thể cập nhật trạng thái của khách hàng!");
         }
         if (dto.getStatus() == null) {
-            throw new RuntimeException("Trạng thái không hợp lệ!");
+            throw new BadRequestException("Trạng thái không hợp lệ!");
         }
 
         user.setStatus(dto.getStatus());
@@ -303,5 +261,31 @@ public class UserServiceImpl implements UserService {
         return MessageResponseDTO.builder()
                 .message("Cập nhật trạng thái khách hàng thành công!")
                 .build();
+    }
+
+    private User findUserById(Long userId) {
+        return userRepository.findById(userId)
+                .orElseThrow(() -> new ResourceNotFoundException("Người dùng không tồn tại!"));
+    }
+
+    private String createVerificationToken(User user) {
+        String token = UUID.randomUUID().toString();
+        user.setVerificationToken(token);
+        user.setVerificationTokenExpiryDate(Instant.now().plus(24, ChronoUnit.HOURS));
+        return token;
+    }
+
+    private String capitalizeName(String name) {
+        if (name == null || name.isBlank()) return "";
+        String[] words = name.toLowerCase().split("\\s+");
+        StringBuilder sb = new StringBuilder();
+        for (String word : words) {
+            if (!word.isEmpty()) {
+                sb.append(Character.toUpperCase(word.charAt(0)))
+                        .append(word.substring(1).toLowerCase())
+                        .append(" ");
+            }
+        }
+        return sb.toString().trim();
     }
 }
